Revision history for Perl extension MooseX::BuildArgs.

{{$NEXT}}

0.03      2012-03-19
 - Rollback Moose prereq version a bit.
 - Fix 'use Moose` header.

0.02      2012-03-19
 - Switch to using Moose::Exporter.

0.01      2012-03-19
 - First release.
