@@ -1,6 +1,9 @@
 Revision history for Perl extension MooseX::BuildArgs.
 
 {{$NEXT}}
+ - Minor doc edits.
+ - Use Moose's meta traits more effectively so that single args may be
+   declared in roles.
 
 0.03      2012-03-19
  - Rollback Moose prereq version a bit.
